added login functionality with last login time update, to update password in edit section,